# OptRPG

./: README.md  heroku.md  pyproject.toml  requirements.txt
optrpg/: __init__.py  data.toml  views.py
optrpg/csv/: knapsack.csv  knapsack_out.csv  matching.csv  matching_out.csv  min_flow.csv  min_flow_node.csv  min_flow_out.csv  set_cover.csv  set_cover_out.csv  shortest_path.csv  shortest_path_out.csv
optrpg/static/content/: site.css
optrpg/templates/: answer.html  base.html  finish.html  index.html  logs.html  problem.html  table.html  users.html
