[tool.poetry]
name = "OptRPG"
version = "0.0.1"
description = "Role Playing Game of Optimization"
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
homepage = "https://github.com/SaitoTsutomu/OptRPG"
classifiers = [
   "Development Status :: 1 - Planning",
   "License :: OSI Approved :: Python Software Foundation License",
   "Programming Language :: Python",
   "Topic :: Software Development",
   "Topic :: Scientific/Engineering",
]
license = "PSFL"
readme = "README.md"

[tool.poetry.scripts]
optrpg = "optrpg:main"

[tool.poetry.dependencies]
python = "^3.8"
ortoolpy = "^0.2.34"
toml = "^0.10.0"
flask = "^2.3.2"
gunicorn = "^20.0.4"
Flask-SQLAlchemy = "^2.4.1"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
