[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Role Playing Game of Optimization"
homepage = "https://github.com/SaitoTsutomu/OptRPG"
license = "PSFL"
name = "OptRPG"
readme = "README.md"
version = "0.1.0"

[tool.poetry.scripts]
optrpg = "optrpg:main"

[tool.poetry.dependencies]
Flask-SQLAlchemy = "^3.1"
flask = "^3.0"
gunicorn = "^22.0"
ortoolpy = "^0"
psycopg2-binary = "^2.9"
python = "^3.11"
toml = "^0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
